# constance_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
script/: test-mssql-table-to-constants.sh
src/: lib.rs  main.rs
src/abstraction/: mod.rs  read_db.rs
src/constancerc/: language.rs  manager.rs  mod.rs  query_execution_options.rs  table_option.rs
src/dto/: mod.rs  value_with_description.rs
src/get_write_configurations/: casing_engine.rs  manager.rs  mod.rs  write_configuration.rs
src/reader/: manager.rs  mod.rs  mssql.rs  read_db.rs  value_with_description.rs
src/table_to_constants/: manager.rs  mod.rs  table_constant.rs
src/write_all/: manager.rs
src/write_files_for_targets/: manager.rs
tests/: get_runtime_configuration.rs  get_write_configurations.rs  table_to_constants.rs
tests/common/: from_path.rs  mod.rs
tests/get_runtime_configuration_util/: common.rs  every_field.rs  mod.rs  only_required_fields.rs
tests/get_write_configurations_util/: dotnet_object_like_enum_buffer.rs  dotnet_object_like_enum_with_description_buffer.rs  dotnet_simple_enum_buffer.rs  dotnet_simple_enum_with_description_buffer.rs  dotnet_string_enum_buffer.rs  dotnet_string_enum_with_description_buffer.rs  mod.rs  rust_simple_enum_buffer.rs  rust_simple_enum_with_description_buffer.rs  rust_string_enum_buffer.rs  rust_string_enum_with_description_buffer.rs  typescript_object_like_enum_buffer.rs  typescript_object_like_enum_with_description_buffer.rs  typescript_simple_enum_buffer.rs  typescript_simple_enum_with_description_buffer.rs  typescript_string_enum_buffer.rs  (+1 more)
(+81 files in other folders)
