[package]
name = "constance"
version = "0.1.0"
authors = ["Jake Hamilton <jakehamtexas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  serde_yaml = "0.8"
  tokio = { version = "0.2.22", features = ["full"] }
  tokio-util = { version = "0.3.1", features = ["compat"] }
  futures = "0.3.5"
  tiberius = { version = "0.4.9", features = ["tls"] }